---------------------------------------------------------------------------------------------------
Version: 0.0.36
  Changes:
	- removed invar from advanced foundry
	- replaced duralimiun with aluminium plate in gun turrent
	- fixed error with vacum tube description and name
---------------------------------------------------------------------------------------------------
Version: 0.0.35
  Changes:
   - fixed mutiple duplicated items in recipes
   - activated rawores overrides and removed bobs ores from spawning
   - fixed several issues related to mods refernceing old names in pymods
   - fixed locale for circuits now display item names
---------------------------------------------------------------------------------------------------
Version: 0.0.34
  Changes:
	- started on function for global item recipe script
	- copied recipes for circuits 1 -3 in pyht to stop bobs electronics from overriding them
	- fixed spacex error
	- fixed error with ingredient count on chipshooter
	- fixed error cuased by missing crushed ore with pyro and angels active
---------------------------------------------------------------------------------------------------
Version: 0.0.33
  Changes:
	- add code for bob compatibilty with pymods
	- organized bob changes so that should be able to load each module of bobs independently
---------------------------------------------------------------------------------------------------
Version: 0.0.32
  Changes:
	- made changes for bobextended to work with pyht.
	- removed optional dependency for omnipermute. it works for me so hopefully it doesnt cuase any errors
---------------------------------------------------------------------------------------------------
Version: 0.0.31
  Changes:
	- made some tweaks to spacex.lua to correct an error with omnipermute
---------------------------------------------------------------------------------------------------
Version: 0.0.30
  Changes: